Preview api: use request body of create event
